# audio-extractor

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  update-homebrew.yml
docs/: ui-prototype.html  use_cases.puml  vision.md
docs/use_cases/: UC-001_select_video_file.md  UC-002_preview_selected_range.md  UC-003_extract_audio.md  UC-004_cancel_extraction.md  UC-005_serve_video_preview.md  traceability.md
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media_server.rs
