[package]
name = "audio-snip"
version = "0.4.1"
description = "A simple Tauri app to extract audio from video files using FFmpeg"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audio_snip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
tauri-plugin-dialog = "2"
axum = "0.8"
tokio = { version = "1", features = ["net", "io-util", "fs", "process"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"
